@@ -61,7 +61,7 @@
 			<label index="msg.maynotDeleteRunningTask">A running task may not be deleted.</label>
 			<label index="msg.maynotEditRunningTask">A running task may not be edited.</label>
 			<label index="msg.maynotStopNonRunningTask">The task is not running. There are no executions to unmark.</label>
-			<label index="msg.noEmail">Please enter an email address</label>
+			<label index="msg.noEmail">Please enter an email address.</label>
 			<label index="msg.noFrequency">No frequency was defined, either as an interval or as a cron command.</label>
 			<label index="msg.noLastRun">The Scheduler has never yet run or the information about the last run has been lost.</label>
 			<label index="msg.noTaskClassFound">The selected task class could not be found. You should probably contact the task's developers.</label>
@@ -69,9 +69,9 @@
 			<label index="msg.notExecuted">Not executed: %s</label>
 			<label index="msg.executionFailed">Execution of task "%1$s" failed with the following message: %2$s</label>
 			<label index="msg.executionFailureReport">Execution failed: %1$d, %2$s</label>
-			<label index="msg.noStartDate">Please define a start date</label>
-			<label index="msg.invalidStartDate">Start date is invalid</label>
-			<label index="msg.invalidEndDate">End date is invalid</label>
+			<label index="msg.noStartDate">Please define a start date.</label>
+			<label index="msg.invalidStartDate">Start date is invalid.</label>
+			<label index="msg.invalidEndDate">End date is invalid.</label>
 			<label index="msg.invalidTaskClass">Class %s of the registered task could not be found. You should re-install the extension that provided it or simply delete this task.</label>
 			<label index="msg.invalidTaskClassEdit">The current class (%s) could not be found. Change it below or consider deleting this task altogether.</label>
 			<label index="msg.schedulerSetupCheck">This screen checks if the requisites for running the Scheduler as a cron job are fulfilled. It also displays information about the last run of the Scheduler.</label>
