@@ -1,3 +1,7 @@
+2009-11-11  Francois Suter  <francois@typo3.org>
+
+	* Cleanup #12552: Scheduler: Code cleanup: Corrected inconsistent use of full stops in language labels
+
 2009-11-11  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #12557: Wrong file references and colors in t3skin-extjs theme, missing icon in recycler
